--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@shopify/flash-list": "1.7.3",
     "@tanstack/react-query": "~5.52.1",
     "app-icon-badge": "^0.1.2",
-    "axios": "~1.8.2",
+    "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
